fix some mistakes